--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <title>Redirecting to MemeSnatcher Status</title>
 <meta http-equiv="refresh" content="0; URL=https://memesnatcherstatus.wixsite.com/website/">
 <link rel="canonical" href="https://memesnatcherstatus.wixsite.com/website/">
+<head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7305YNX0QM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7305YNX0QM');
+</script>
+</head>
 <body>
   <h3>Please wait while you are directed to the MemeSnatcher Status website.</h3>
   <h4>If you are not directed automatically click here <a href=https://memesnatcherstatus.wixsite.com/website/> https://memesnatcherstatus.wixsite.com/website/ </a> </h4>
